Changed tests to be compatible with java 11