@@ -5,6 +5,7 @@ import drinkshop.domain.OrderItem;
 import drinkshop.domain.Product;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ReceiptGenerator {
     public static String generate(Order o, List<Product> products) {
@@ -12,7 +13,7 @@ public class ReceiptGenerator {
         sb.append("===== BON FISCAL =====\n").append("Comanda #").append(o.getId()).append("\n");
         for (OrderItem i : o.getItems()) {
             try {
-                Product p = products.stream().filter((p1) -> i.getProduct().getId() == p1.getId()).toList().get(0);
+                Product p = products.stream().filter((p1) -> i.getProduct().getId() == p1.getId()).collect(Collectors.toList()).get(0);
                 sb.append(p.getNume()).append(": ").append(p.getPret()).append(" x ").append(i.getQuantity()).append(" = ").append(i.getTotal()).append(" RON\n");
             }
             catch (IndexOutOfBoundsException e){
